@@ -13,8 +13,20 @@ Alert Encoder
    :start-after: --[[
    :end-before: --]]
 
+CBUF Librato Encoder
+--------------------
+.. include:: /../../sandbox/lua/encoders/cbuf_librato.lua
+   :start-after: --[[
+   :end-before: --]]
+
 ESPayloadEncoder
 ----------------
 .. include:: /../../sandbox/lua/encoders/es_payload.lua
    :start-after: --[[
    :end-before: --]]
+
+Statmetric Influx Encoder
+-------------------------
+.. include:: /../../sandbox/lua/encoders/statmetric_influx.lua
+   :start-after: --[=[
+   :end-before: --]=]
