@@ -20,6 +20,8 @@ Features
 * SandboxEncoder now supports return value of -2 from the process_message call
   to specify that no output is being generated.
 
+* Added CBUF Librato Encoder.
+
 0.7.2 (2014-MM-DD)
 ==================
 
